# care-workflow

./: .env.example  .fix-summary.md  .gitignore  AGENTS.md  BOARD.md  CLAUDE.md  CONTRIBUTING.md  CUSTOM_BLOCKS.md  LICENSE  README.md  TALK-27002_Multiples_Expresiones.md  main.py  pyproject.toml  run_mqtt.sh  run_prediction_alert.sh
.github/workflows/: ci.yml
.obsidian/: workspace.json
HISTORIAL/: TALK.md
care/: __init__.py  base.py  env.py  logger.py  roboflow_api.py
care/active_learning/: accounting.py  batching.py  cache_operations.py  configuration.py  core.py  entities.py  middlewares.py  post_processing.py
care/cache/: __init__.py  base.py  lru_cache.py  memory.py  model_artifacts.py  redis.py  serializers.py
care/camera/: camera.py  utils.py  video_source.py
care/devices/: utils.py
care/managers/: active_learning.py  base.py  metrics.py  pingback.py  prometheus.py  stub_loader.py
care/models/: aliases.py  base.py  classification_base.py  instance_segmentation_base.py  keypoints_detection_base.py  object_detection_base.py  stubs.py
care/registries/: base.py  composite.py  local.py  roboflow.py
care/stream/: entities.py  inference_pipeline.py  sinks.py  stream.py  utils.py  watchdog.py
care/usage_tracking/: collector.py  config.py  decorator_helpers.py  plan_details.py  redis_queue.py  sqlite_queue.py  utils.py
care/utils/: drawing.py  (+9 more)
care_workflow/: __init__.py  core.py
docs/: CUSTOM_BLOCKS_GUIDE.md
examples/: basic_workflow.py  run_detection.py  run_local_detection.py  run_mqtt_detection.py  run_prediction_alarm.py  test_mqtt_block.py
scripts/: run_mqtt_detection.sh  test_blocks.sh
tests/: __init__.py  test_core.py
(+89 files in other folders)
